<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/primaryColor"
    android:layout_height="match_parent">
    <LinearLayout
        android:paddingTop="40dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/frameInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:fontFamily="@font/quicksand_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unblock_any_site"
            android:textSize="12sp"/>
        <TextView
            android:fontFamily="@font/quicksand_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_proxy_vpn_unblock"
            android:textSize="12sp"/>


    </LinearLayout>
    <LinearLayout
        app:layout_constraintBottom_toTopOf="@id/frameAds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/frameStatus"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/speedTrafic"
            android:visibility="gone"
            android:paddingHorizontal="60dp"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_down"
                        app:tint="@color/accentGreen" />
                    <TextView
                        android:id="@+id/downloadSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="42"/>
                    <TextView
                        android:id="@+id/downloadSize"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:alpha="0.4"
                        android:fontFamily="@font/quicksand_medium"
                        android:textColor="@color/primaryColorVariant"
                        android:text="kbps"/>
                </LinearLayout>

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:alpha="0.7"
                    android:fontFamily="@font/quicksand_bold"
                    android:textColor="@color/primaryColorVariant"
                    android:text="DOWNLOAD"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_up"
                        app:tint="@color/acentPink" />
                    <TextView
                        android:id="@+id/uploadSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="42"/>
                    <TextView
                        android:id="@+id/uploadSize"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:alpha="0.4"
                        android:fontFamily="@font/quicksand_medium"
                        android:textColor="@color/primaryColorVariant"
                        android:text="kbps"/>
                </LinearLayout>

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:fontFamily="@font/quicksand_bold"
                    android:alpha="0.7"
                    android:textColor="@color/primaryColorVariant"
                    android:text="UPLOAD"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:visibility="visible"
            android:paddingHorizontal="60dp"
            android:weightSum="1"
            android:id="@+id/infoStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/tap_start_button_to_unblock"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/button_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/frameStatus"
        app:layout_constraintTop_toBottomOf="@id/frameInfo">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.unblock.vpn.websites.util.RippleBackground
                android:visibility="visible"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/buttonVpnStart"
                app:rb_radius="75dp"
                app:rb_duration="4000"
                app:rb_scale="1.5"
                app:rb_strokeWidth="10dp"
                app:rb_rippleAmount="3"
                app:rb_color="@color/acentPink"
                app:rb_type="fillRipple">
            </com.unblock.vpn.websites.util.RippleBackground>

            <com.unblock.vpn.websites.util.RippleBackground
                android:visibility="gone"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:id="@+id/buttonVpnStop"
                app:rb_radius="75dp"
                app:rb_duration="4000"
                app:rb_scale="1.5"
                app:rb_strokeWidth="10dp"
                app:rb_rippleAmount="3"
                app:rb_color="@color/primaryColorVariant"
                app:rb_type="fillRipple">
            </com.unblock.vpn.websites.util.RippleBackground>
            <LinearLayout
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imageIconButton"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_on_off_button"/>
                <TextView
                    android:id="@+id/textButton"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_text"
                    android:textColor="@color/white"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="16sp"/>

            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/statusFrame"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_frame">

        <TextView
            android:visibility="gone"
            android:id="@+id/timerConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryColorVariant"
            android:textSize="16sp"
            android:text="00:00:00"
            android:layout_gravity="center"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/statusConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="18sp"
            android:textColor="@color/acentPink"
            android:text="@string/not_connected_text"/>




    </LinearLayout>

    <FrameLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:id="@+id/frameAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginBottom="20dp">

        <com.unblock.vpn.websites.ads.SmallAdsTemplate
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>